--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -55,7 +55,7 @@
                 </form>
               </div>
             </div>
-            <div class="card text-white py-5 d-md-down-none" style="background:rgba(0, 0, 0, 0.3);width:44% ">
+            <div class="card text-white py-5 d-md-down" style="background:rgba(0, 0, 0, 0.3)">
               <div class="card-body text-center">
                 <div>
                   <h2>Sign up</h2>
