--- a/src/app/views/company/components/add-company/add-company.component.html
+++ b/src/app/views/company/components/add-company/add-company.component.html
@@ -23,7 +23,7 @@
                         <div class="form-group">
                             <label for="companyDescription">Company Description :</label>
                             <textarea class="form-control" row="40" id="companyDescription"
-                                placeholder="Type your Company description here" formControlName="companyDescription"
+                                placeholder="Enter your company description here" formControlName="companyDescription"
                                 [ngClass]="{'is-invalid': submitted && companyForm.controls.companyDescription.errors, 'is-valid': submitted && !companyForm.controls.companyDescription.errors}"></textarea>
                             <div class="invalid-feedback d-block">
                                 <div *ngIf="submitted && companyForm.controls.companyDescription.hasError('required')">
@@ -54,7 +54,7 @@
                                 [ngClass]="{'is-invalid': submitted && companyForm.controls.password.errors, 'is-valid': submitted && !companyForm.controls.password.errors}">
                             <div class="invalid-feedback d-block"
                                 *ngIf="submitted && companyForm.controls.password.hasError('required')">
-                                assoword is required.
+                                passoword is required.
                             </div>
                             <div class="invalid-feedback d-block"
                                 *ngIf="submitted && companyForm.controls.password.hasError('minlength')">
@@ -76,9 +76,10 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="file-input">File input</label>
+                            <label for="uploadPhoto">File input</label>
                             <div class="col-md-9">
-                                <input type="file" id="file-input" name="file-input">
+                                <input type="file"(change)="onFileSelected($event)">
+
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Add Company</button>
