--- a/src/app/views/tags/tags.component.html
+++ b/src/app/views/tags/tags.component.html
@@ -1,23 +1,24 @@
 <style>
     .modal.right.fade .modal-dialog {
-		right: -320px;
-		-webkit-transition: opacity 0.3s linear, right 0.3s ease-out;
-		   -moz-transition: opacity 0.3s linear, right 0.3s ease-out;
-		     -o-transition: opacity 0.3s linear, right 0.3s ease-out;
-		        transition: opacity 0.3s linear, right 0.3s ease-out;
-	}
-	
-	.modal.right.fade.in .modal-dialog {
-		right: 0;
-	}
+        right: -320px;
+        -webkit-transition: opacity 0.3s linear, right 0.3s ease-out;
+        -moz-transition: opacity 0.3s linear, right 0.3s ease-out;
+        -o-transition: opacity 0.3s linear, right 0.3s ease-out;
+        transition: opacity 0.3s linear, right 0.3s ease-out;
+    }
 
+    .modal.right.fade.in .modal-dialog {
+        right: 0;
+    }
 </style>
 
 
 
 <div class="offset-1 my-3 row">
     <div class="col-12">
-        <button class="btn btn-success col-2 float-right" data-bs-toggle="modal" data-bs-target="#addModal"><i class="fas fa-plus"></i> Add
+        <button class="btn btn-success col-2 float-right" data-toggle="modal"
+        (click)="show(tag._id)"><i
+                class="fas fa-plus"></i> Add
             tag</button>
         <!-- <input type="search" class="form-control col-3" placeholder="Search product by name"  [(ngModel)]="searchText"> -->
     </div>
@@ -37,7 +38,8 @@
             <td>{{tag.title}}</td>
             <td>{{tag.description}}</td>
             <td>
-                <button type="button" class="btn btn-warning" data-bs-toggle="modal"  data-bs-target="#updateModal">
+                <button type="button" class="btn btn-warning" data-toggle="modal"
+                    (click)="show(tag._id)">
                     <i class="far fa-edit"></i> Update
                 </button>
                 <button type="button" class="btn btn-danger" style="color:black!important" (click)='delete(tag._id)'><i
@@ -47,86 +49,47 @@
     </tbody>
 </table>
 
-<!-- Modal ADD -->
-<div class="modal right fade" id="addModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+
+<div bsModal #modal="bs-modal" class="modal right fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-primary" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title" id="exampleModalLabel">Add tag</h3>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h4 class="modal-title">Add tag</h4>
+
+                <button type="button" class="close" (click)="hide()" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
-            <div class="modal-body">
-                <form [formGroup]="tagAddForm" (ngSubmit)="addTag()">
+            <form [formGroup]="tagForm" (ngSubmit)="addTag()">
+                <div class="modal-body">
+
                     <div class="form-group">
                         <label for="name">Tag title</label>
-                        <input type="text" class="form-control" placeholder="Name" formControlName="title" 
-                        [ngClass]="{ 'is-invalid': addSubmitted && tagAddForm.controls.title.errors,
-                        'is-valid': addSubmitted && !tagAddForm.controls.title.errors }">
+                        <input type="text" class="form-control" placeholder="Name" formControlName="title" [ngClass]="{ 'is-invalid': submitted && tagForm.controls.title.errors,
+                '   is-valid': submitted && !tagForm.controls.title.errors }">
                         <div class="invalid-feedback d-block"
-                            *ngIf="addSubmitted && tagAddForm.controls.title.hasError('required')">
+                            *ngIf="submitted && tagForm.controls.title.hasError('required')">
                             Tag name is required.
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="name">Tag description</label>
                         <textarea type="text" class="form-control" placeholder="Description..."
-                            formControlName="description" [ngClass]="{ 'is-invalid': addSubmitted && tagAddForm.controls.description.errors,
-                        'is-valid': addSubmitted && !tagAddForm.controls.description.errors }">
-                        </textarea>
+                            formControlName="description" [ngClass]="{ 'is-invalid': submitted && tagForm.controls.description.errors,
+                    'is-valid': submitted && !tagForm.controls.description.errors }">
+                    </textarea>
                         <div class="invalid-feedback d-block"
-                            *ngIf="addSubmitted && tagAddForm.controls.description.hasError('required')">
+                            *ngIf="submitted && tagForm.controls.description.hasError('required')">
                             Tag description is required.
                         </div>
                     </div>
-                    <div>
-                        <button type="submit" class="btn btn-success">Add this tag</button>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Modal UPDATE -->
-<div class="modal right fade" id="updateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Update selected tag</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form [formGroup]="tagUpdateForm" (ngSubmit)="updateTag()">
-                    <div class="form-group">
-                        <label for="name">Tag title</label>
-                        <input type="text" class="form-control" placeholder="Name" formControlName="title" [ngClass]="{ 'is-invalid': updateSubmitted && tagUpdateForm.controls.title.errors,
-                    '   is-valid': updateSubmitted && !tagUpdateForm.controls.title.errors }">
-                        <div class="invalid-feedback d-block"
-                            *ngIf="updateSubmitted && tagUpdateForm.controls.title.hasError('required')">
-                            Tag name is required.
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="name">Tag description</label>
-                        <textarea type="text" class="form-control" placeholder="Description..."
-                            formControlName="description" [ngClass]="{ 'is-invalid': updateSubmitted && tagUpdateForm.controls.description.errors,
-                        'is-valid': updateSubmitted && !tagUpdateForm.controls.description.errors }">
-                        </textarea>
-                        <div class="invalid-feedback d-block"
-                            *ngIf="updateSubmitted && tagUpdateForm.controls.description.hasError('required')">
-                            Tag description is required.
-                        </div>
-                    </div>
-                    <div>
-                        <button type="submit" class="btn btn-success">Update this tag</button>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" (click)="hide()">Close</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
