--- a/src/app/views/events/add-event/add-event.component.html
+++ b/src/app/views/events/add-event/add-event.component.html
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" *ngIf="eventForm.value.eventType == 'Paid'">
                             <label>Price :</label>
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Price" formControlName="price"
@@ -82,9 +82,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <!-- <div class="form-group row">
                             <label>Event Started In : </label>
                             <div class="col-md-6">
+                                <input  type="datetime-local" name="partydate" min="2021-04-27T12:30" value="bsValue" formContrilName="starDateTime">
                               <input type="text" #dp="bsDatepicker" class="form-control" [minDate]="minDate" bsDatepicker [(bsValue)]="bsValue" formContrilName="starDateTime"
                               [ngClass]="{'is-invalid': submitted && eventForm.controls.starDateTime.errors, 'is-valid': submitted && !eventForm.controls.starDateTime.errors}">
                             </div>
@@ -96,7 +97,7 @@
                         </div>
                         <div class="form-group row">
                             <label>Event Ended In : </label>
-                            <div class="col-md-6">
+                            <div class="">
                               <input type="text" #dp="bsDatepicker" class="form-control" [minDate]="minDate" bsDatepicker [(bsValue)]="bsValue" formContrilName="endDateTime"
                               [ngClass]="{'is-invalid': submitted && eventForm.controls.endDateTime.errors, 'is-valid': submitted && !eventForm.controls.endDateTime.errors}">
                             </div>
@@ -105,7 +106,7 @@
                                     Event end time is required.
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <button type="submit" class="btn btn-primary btn-block">Add event</button>
                         <button type="button" class="btn btn-danger btn-block" routerLink="/events">Cancel</button>
                     </form>
