--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -28,8 +28,8 @@
           <td>{{ company.email }}</td>
           <td>{{ company.role }}</td>
           <td>
-            <button class="btn btn-info" [routerLink]="[ '/update-company', i ]"> <i class="fas fa-pen"></i> Update</button>
-            <button class="btn btn-danger ml-1" (click)="deletecompany(i)"> <i class="far fa-trash-alt"></i> Delete</button>
+            <button class="btn btn-info" [routerLink]="['/companies/update-company',company._id]"> <i class="fas fa-pen"></i> Update</button>
+            <button class="btn btn-danger ml-1" (click)="deletecompany(company._id)"> <i class="far fa-trash-alt"></i> Delete</button>
           </td>
         </tr>
       </tbody>
