--- a/src/app/views/company/components/update-company/update-company.component.html
+++ b/src/app/views/company/components/update-company/update-company.component.html
@@ -8,7 +8,7 @@
                     <small>Form</small>
                 </div>
                 <div class="card-body">
-                    <form [formGroup]="updateCompanyForm" (ngSubmit)="UpdateCompany()">
+                    <form [formGroup]="updateCompanyForm" (ngSubmit)="loadCompany()">
                         <div class="form-group">
                             <label for="companyName">Company</label>
                             <input type="text" class="form-control" id="companyName"
@@ -47,7 +47,7 @@
                             </div>
 
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="password"> password</label>
                             <input type="password" id="password" name="password" class="form-control"
                                 placeholder="Enter  password.." formControlName="password"
@@ -60,7 +60,7 @@
                                 *ngIf="submitted && updateCompanyForm.controls.password.hasError('minlength')">
                                 Passoword is required minimum 8 char.
                             </div>
-                        </div>
+                        </div> -->
                         <div class="form-group row">
                             <label for="role">Select Role</label>
                             <div class="col-md-9">
