--- a/src/app/views/company/components/add-company/add-company.component.html
+++ b/src/app/views/company/components/add-company/add-company.component.html
@@ -1,10 +1,10 @@
 <div class="animated fadeIn"
-    style="background-image: url('assets/img/Background-image/event.jpg');background-size: cover;">
+    style="background-image: url('assets/img/Background-image/danny-howe-bn-D2bCvpik-unsplash.jpg');background-size: cover;">
     <div class="row">
         <div class="offset-3 col-6 ">
             <div class="card" style="background:rgba(255, 255, 255, 0.336);">
                 <div class="card-header" style="background:rgba(255, 255, 255, 0.678);">
-                    <strong>Add Company</strong>
+                    <strong>Amalia Entertaiment & Events</strong>
                 </div>
                 <div class="card-body">
                     <form [formGroup]="companyForm" (ngSubmit)="AddCompany()">
