--- a/src/app/views/events/events.component.html
+++ b/src/app/views/events/events.component.html
@@ -31,34 +31,31 @@
                                 Event Description is required.</div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="form-group col-sm-5">
-                            <label>Event Started In : </label>
-                            <div>
-                                <input type="text" #dp="bsDatepicker" class="form-control" [minDate]="minStartDate"
-                                    bsDatepicker [(bsValue)]="bsValue" formControlName="starDateTime"
-                                    [ngClass]="{'is-invalid': submitted && eventForm.controls.starDateTime.errors, 'is-valid': submitted && !eventForm.controls.starDateTime.errors}">
-                            </div>
-                            <div class="invalid-feedback d-block">
-                                <div *ngIf="submitted && eventForm.controls.starDateTime.hasError('required')">
-                                    Event start time is required.
-                                </div>
+                    <div class="form-group col-sm-5">
+                        <label>Event Started In : </label>
+                        <div>
+                            <input type="text" #dp="bsDatepicker" class="form-control" [minDate]="minStartDate"
+                                bsDatepicker [(bsValue)]="startValue" formControlName="starDateTime"
+                                [ngClass]="{'is-invalid': submitted && eventForm.controls.starDateTime.errors, 'is-valid': submitted && !eventForm.controls.starDateTime.errors}">
+                        </div>
+                        <div class="invalid-feedback d-block">
+                            <div *ngIf="submitted && eventForm.controls.starDateTime.hasError('required')">
+                                Event start time is required.
                             </div>
                         </div>
-                        <div class="form-group col-sm-5">
-                            <label>Event Ended In : </label>
-                            <div>
-                                <input type="text" #dp="bsDatepicker" class="form-control" [minDate]="minEndDate"
-                                    bsDatepicker [(bsValue)]="bsValue" formControlName="endDateTime"
-                                    [ngClass]="{'is-invalid': submitted && eventForm.controls.endDateTime.errors, 'is-valid': submitted && !eventForm.controls.endDateTime.errors}">
-                            </div>
-                            <div class="invalid-feedback d-block">
-                                <div *ngIf="submitted && eventForm.controls.endDateTime.hasError('required')">
-                                    Event end time is required.
-                                </div>
+                    </div>
+                    <div class="form-group col-sm-5">
+                        <label>Event Ended In : </label>
+                        <div>
+                            <input type="text" #dp="bsDatepicker" class="form-control" [minDate]="minEndDate"
+                                bsDatepicker [(bsValue)]="endValue" formControlName="endDateTime"
+                                [ngClass]="{'is-invalid': submitted && eventForm.controls.endDateTime.errors, 'is-valid': submitted && !eventForm.controls.endDateTime.errors}">
+                        </div>
+                        <div class="invalid-feedback d-block">
+                            <div *ngIf="submitted && eventForm.controls.endDateTime.hasError('required')">
+                                Event end time is required.
                             </div>
                         </div>
-
                     </div>
                     <div class="form-group row">
                         <label class="col-md-4 col-form-label">Event's Type :</label>
