--- a/src/app/views/company/components/add-company/add-company.component.html
+++ b/src/app/views/company/components/add-company/add-company.component.html
@@ -85,7 +85,7 @@
 
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Add Company</button>
+                        <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-plus-square fa-lg"></i> Add Company</button>
                         <button type="submit" class="btn btn-danger btn-block" routerLink="/companies">Cancel</button>
                     </form>
                 </div>
