--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -179,37 +179,36 @@
   </main>
   <div class="modal fade" id="forgotPassword" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-warning">
-      <div class="modal-content" style="background:rgba(255,255,255, 0.8);">
+      <div class="modal-content" style="background:rgba(255,255,255, 0.5);">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel" style="color: rgb(10, 120, 148);">Reset password</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+          <h5>Account e-mail</h5>
           <form [formGroup]="forgotPassword" (ngSubmit)="forgot()">
-            <h5>Account e-mail</h5>
+            
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text">@</span>
               </div>
-              <input type="text" class="form-control" placeholder="E-mail" autocomplete="email" formControlName="email"
-                [ngClass]="{ 'is-invalid': forgetSubmitted && registerForm.controls.email.errors, 'is-valid': registerSubmitted && !registerForm.controls.email.errors }">
+              <input type="email" class="form-control" placeholder="E-mail" formControlName="email"
+                [ngClass]="{ 'is-invalid': forgetSubmitted && forgotPassword.controls.email.errors, 
+                'is-valid': forgotSubmitted && !forgotPassword.controls.email.errors }">
 
-              <div *ngIf="registerForm.controls.email.hasError('required')" class="invalid-feedback">E-mail is
+              <div *ngIf="forgotPassword.controls.email.hasError('required')" class="invalid-feedback">E-mail is
                 required.</div>
 
-            </div>
+              </div>
+            <button type="submit" class="btn btn-primary" >Reset <i class="fa fa-paper-plane-o"></i></button>
             <p class="text-dark bold">An e-mail will be sent to your e-mail account containing a link to reset your
               password.</p>
-            <button class="btn btn-primary">Reset <i class="fa fa-paper-plane-o"></i></button>
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-warning" style="width: 30%; margin: auto;"
+          <button type="button" class="btn btn-secondary" style="width: 30%; margin: auto;"
             data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"></script>
