--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -1,43 +1,46 @@
 <div class="animated fadeIn"
-style="background-image: url('assets/img/Background-image/best-Event-Flyer-Templates.jpeg');background-size: cover;">
-<div class="row mt-5">
-  <div class="offset-1 col-11">
-    <div class="row col-10">
-      <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search company...">
+  style="background-image: url('assets/img/Background-image/best-Event-Flyer-Templates.jpeg')">
+  <div class="row mt-5">
+    <div class="offset-1 col-11">
+      <div class="row col-10"> <i class="fa fa-search fa-lg"></i>
+        <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search company...">
+        <i class="fa fa-search fa-lg"></i>
       </div>
       <div class=" float-right">
-        
-    <button class="btn btn-primary  float-right" routerLink="/companies/add-company"><i class="fa fa-plus fa-lg"></i> Add company</button>
+
+        <button class="btn btn-primary  float-right" routerLink="/companies/add-company"><i
+            class="fa fa-plus fa-lg"></i> Add company</button>
       </div>
-    
+
+    </div>
+    <div class="offset-1 col-11">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Email</th>
+            <th scope="col">Role</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let company of company ; let i=index">
+            <th scope="row">{{ i+1 }}</th>
+            <td>{{ company.companyName }}</td>
+            <td>{{ company.companyDescription }}</td>
+            <td>{{ company.email }}</td>
+            <td>{{ company.role }}</td>
+            <td>
+              <button class="btn btn-info" [routerLink]="['/companies/update-company',company._id]"> <i
+                  class="fas fa-pen"></i> Update</button>
+              <button class="btn btn-danger ml-1" (click)="deletecompany(company._id)"> <i class="cui-delete icons font"></i> Delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- <p>{{ currentDate | date:'fullDate' }}</p> -->
+    </div>
   </div>
-  <div class="offset-1 col-11">
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Name</th>
-          <th scope="col">Description</th>
-          <th scope="col">Email</th>
-          <th scope="col">Role</th>
-          <th scope="col">Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let company of company ; let i=index">
-          <th scope="row">{{ i+1 }}</th>
-          <td>{{ company.companyName }}</td>
-          <td>{{ company.companyDescription }}</td>
-          <td>{{ company.email }}</td>
-          <td>{{ company.role }}</td>
-          <td>
-            <button class="btn btn-info" [routerLink]="['/companies/update-company',company._id]"> <i class="fas fa-pen"></i> Update</button>
-            <button class="btn btn-danger ml-1" (click)="deletecompany(company._id)">  <i class="fa fa-remove fa-lg"></i> Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <!-- <p>{{ currentDate | date:'fullDate' }}</p> -->
-  </div>
-</div>
 </div>
